<resources>
    <string name="app_name">SIMS</string>


    <!--    studentManagementApp-title-->
    <string name="title">OTP Verification</string>
    <string name="sub_title">Enter the code from the sms we sent\nto +91 493743784</string>
    <string name="receive">I didn\'t receive any code\u0020</string>
    <string name="zero">00:00</string>
    <string name="resend">RESEND</string>
    <string name="submit">Submit</string>
    <!--    courseMaterial-title2-->
    <string name="bookImage">Book Image</string>
    <string name="card">Card</string>
    <string name="title2">Course Materials</string>
    <string name="menu">menu</string>
    <string name="java">\nJAVA</string>
    <string name="dbms">\nDBMS</string>
    <string name="kotlin">\nKOTLIN</string>
    <string name="cpp">\nC++</string>
    <string name="dsa">\nDSA</string>
    <string name="net">\n.NET</string>
    <string name="python">\nPYTHON</string>
    <string name="c">\nC</string>
    <!--    onlineTextbooks-title3-->
    <string name="title3">Online Textbooks</string>
    <!--    payments-title4-->
    <string name="title4">Payments</string>
    <string name="hostel_allocation">\nHostel Allocation</string>
    <string name="textbooks">\nTextbooks</string>
    <string name="club_society"><![CDATA[\nClub & Society]]></string>
    <string name="extra">\nExtra</string>
    <string name="school_transfer">\nSchool Transfer</string>
    <string name="tuition">\nTuition</string>
    <!--    notifications-title5-->
    <string name="title5">Settings</string>
    <string name="live_lectures">Live Lectures</string>
    <string name="events">Events</string>
    <string name="clubs">Clubs</string>
    <string name="fee_remainder">Fee Remainder</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="dsa_cc_11">DSA CC-11</string>
    <string name="prof_xxx">Prof xxx</string>
    <string name="menu_button">Menu button</string>
    <string name="Assignments">Assignments</string>
    <string name="group_work">Group Work</string>
    <string name="_2_5">2 / 5</string>
    <string name="_2_2">2 / 2</string>
    <string name="submission">Submission:</string>
    <string name="assignment_due_date">Assignment due on the 21st of May at 11:59 pm</string>
    <string name="progressPercentage">68%</string>
    <string name="course_outline_progress">Course Outline Progress</string>
    <string name="attendance">Attendance</string>
    <string name="details">Details</string>
    <string name="xxxx">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <!--        summary-title6-->
    <string name="title6">Summary</string>
    <!--            sims-title7-->
    <string name="title7">Student Information Management System</string>
    <string name="version">v 1.0.1</string>
    <string name="app_logo">App logo</string>
    <string name="back_button">Go Back</string>


    <!--    Main activity (welcome screen string)-->
    <string name="heading">SIMS: The Easy Way to Manage Your University records</string>
    <string name="sub_heading">The SIMS app makes it easy to manage your student\'s records. You can view student grades, attendance, transcripts, and contact information. You can also track student progress and communicate with students and parents.</string>
    <string name="button_txt">Get Started</string>


    <!--    Login activity-->
    <string name="sign_in_button">Sign In</string>
    <string name="tc_text_1">I agree to all the\u0020</string>
    <string name="tc_text_2">Terms and Conditions</string>
    <string name="registration_no">Registration number</string>
    <string name="registration_no_hint">2023UTSAV22</string>
    <string name="dob">Date of birth</string>
    <string name="dob_hint">22/02/2000</string>
    <string name="log_in">Log In</string>
    <string name="log_in_subhead">To access all the features</string>


    <!--    Home Fragment -->
    <string name="good_morning">Good morning,</string>
    <string name="name">Lorem</string>
    <string name="student_data">Student data</string>
    <string name="id_no">ID no.</string>
    <string name="placeholder_id">202023SAHIL21</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Schedule fragment-->
    <string name="select_date">Select date</string>
    <string name="courses">Courses</string>

</resources>