<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_button"
        android:padding="8dp"
        android:src="@drawable/ic_hamburger_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:textColor="@color/text_primary"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Summary" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="335dp"
        android:layout_height="218dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/card"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title6">


        <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:paddingTop="10sp"
            android:text="@string/dsa_cc_11"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp"
            android:text="@string/prof_xxx"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="70sp"
            android:text="@string/Assignments"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="90sp"
            android:text="@string/_2_5"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140sp"
            android:layout_marginTop="70sp"
            android:text="@string/group_work"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140sp"
            android:layout_marginTop="90sp"
            android:text="@string/_2_2"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="120sp"
            android:text="@string/submission"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="140sp"
            android:text="@string/assignment_due_date"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/miniProfileLogo"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270sp"
            android:contentDescription="@string/bookImage"
            android:paddingTop="10sp"
            app:srcCompat="@drawable/ic_mini_profile" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="160sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="180sp"
            android:text="@string/course_outline_progress"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300sp"
            android:layout_marginTop="180sp"
            android:text="@string/progressPercentage"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="159.5dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/card"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:paddingTop="10sp"
            android:text="@string/attendance"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="35sp"
            android:text="@string/progressPercentage"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="159.5dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/card"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/card2"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toTopOf="@+id/card2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:paddingTop="10sp"
            android:text="@string/attendance"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="35sp"
            android:text="@string/progressPercentage"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_primary"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        tools:text="Assignments" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="335dp"
        android:layout_height="183dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/card"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="P1_bay"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/details"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/book1"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270sp"
            android:contentDescription="@string/bookImage"
            android:paddingTop="10sp"
            app:srcCompat="@drawable/ic_assignment" />
        <TextView
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp"
            android:text="@string/xxxx"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="120sp"
            android:text="@string/submission"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="140sp"
            android:text="@string/assignment_due_date"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>