<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="Menu button"
            android:padding="8dp"
            android:src="@drawable/ic_hamburger_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="Notificaion button"
            android:padding="20dp"
            android:src="@drawable/ic_alarm"
            app:layout_constraintBottom_toBottomOf="@id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="96dp"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/good_morning" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:text="@string/name" />

        <!--    TODO: Remove textStyle="Bold" and replace with dynamic font-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:text="@string/student_data"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_box"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="52dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/id_no" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/placeholder_id"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_box"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="40dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/id_no"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/placeholder_id" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:baselineAligned="false"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/border_box"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progressPercentage"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/white"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/border_box"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progressPercentage"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:contentDescription="@string/card"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


            <TextView
                android:layout_width="134sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:paddingTop="10sp"
                android:text="@string/dsa_cc_11"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="84sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="40sp"
                android:text="@string/prof_xxx"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="117sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="70sp"
                android:text="@string/Assignments"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="97sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="90sp"
                android:text="@string/_2_5"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="119sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140sp"
                android:layout_marginTop="70sp"
                android:text="@string/group_work"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="119sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140sp"
                android:layout_marginTop="90sp"
                android:text="@string/_2_2"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="120sp"
                android:text="@string/submission"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="140sp"
                android:text="@string/assignment_due_date"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


            <ImageView
                android:id="@+id/miniProfileLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280sp"
                android:contentDescription="@string/bookImage"
                android:paddingTop="10sp"
                app:srcCompat="@drawable/ic_mini_profile" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="160sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="180sp"
                android:paddingBottom="10sp"
                android:text="@string/course_outline_progress"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280sp"
                android:layout_marginTop="180sp"
                android:text="@string/progressPercentage"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>